🔧 Final fix for Maven async integration
✅ Fixed Issues:
- Added version to exec-maven-plugin to resolve warnings
- Fixed script permissions for wrapper
- Tested working status and help commands
- Confirmed health-check functionality

🎯 Complete Maven integration for unified async WildFly system
All commands working properly with circuit breaker protection

--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.1.0</version>
                         <executions>
                             <execution>
                                 <phase>validate</phase>
@@ -225,6 +226,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.1.0</version>
                         <executions>
                             <execution>
                                 <phase>validate</phase>
@@ -252,6 +254,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.1.0</version>
                         <executions>
                             <execution>
                                 <phase>validate</phase>
@@ -283,6 +286,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.1.0</version>
                         <executions>
                             <execution>
                                 <phase>validate</phase>
