--- a/.github/workflows/async-consumer-v1.0.0.yml
+++ b/.github/workflows/async-consumer-v1.0.0.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   circuit-breaker:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, vault]
     outputs:
       should-proceed: ${{ steps.circuit-check.outputs.should-proceed }}
       circuit-reason: ${{ steps.circuit-check.outputs.reason }}
@@ -99,7 +99,7 @@ jobs:
 
   consume-results:
     needs: circuit-breaker
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, vault]
     timeout-minutes: 15
     if: needs.circuit-breaker.outputs.should-proceed == 'true'
     steps:
@@ -282,7 +282,7 @@ jobs:
 
   circuit-breaker-terminated:
     needs: circuit-breaker
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, vault]
     if: needs.circuit-breaker.outputs.should-proceed == 'false'
     steps:
       - name: Circuit Breaker Termination
@@ -301,7 +301,7 @@ jobs:
 
   summary:
     needs: [circuit-breaker, consume-results]
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, vault]
     if: always()
     steps:
       - name: Workflow Summary
