--- a/.github/workflows/fibonacci-simple-v1.1.0.yml
+++ b/.github/workflows/fibonacci-simple-v1.1.0.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   fibonacci-producer:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, vault]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -168,7 +168,7 @@ jobs:
           echo "Producer → Repository Dispatch → Consumer"
 
   circuit-breaker-demo:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, vault]
     needs: fibonacci-producer
     steps:
       - name: Circuit Breaker Pattern Demo
